added complaints and fixes
